<resources>
    <string name="app_name">OnThiThptQG</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thoat">Thoát</string>
    <string name="exit_alert">Exit Alert</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="chia_se_ung_dung">Chia sẻ ứng dụng Ôn Thi THPT Quốc Gia</string>
    <string name="chon_mot_ung_dung">Chọn một ứng dụng để chia sẻ</string>
    <string name="khoa_h_c_t_nhi_n">Khoa học tự nhiên</string>
    <string name="khoa_h_c_x_h_i">Khoa học xã hội</string>
    <string name="to_n">Toán Học</string>
    <string name="vat_ly">Vật Lý</string>
    <string name="hoa_hoc">Hóa Học</string>
    <string name="sinh_hoc">Sinh Học</string>
    <string name="ngu_van">Ngữ Văn</string>
    <string name="lich_su">Lịch Sử</string>
    <string name="tieng_anh">Tiếng Anh</string>
    <string name="gdcd">GDCD</string>
    <string name="dia_ly">Địa Lý</string>
    <string name="nguyen_tac">Ứng dụng này thiết kế với mục đích giúp các học sinh lớp 11, 12 có thể ôn thi THPT Quốc gia mọi nơi, mọi lúc kể cả khi không có mạng Internet.\n\nĐể phục vụ các bạn học tập tốt nhất, chúng tôi sẽ thường xuyên cố gắng cập nhật đề thi cũng như tài liệu mới nhất và nhanh nhất có thể. Trong quá trình biên soạn đề thi cũng như tài liệu sẽ có thể có những sai sót, vì vậy, trong quá trình sử dụng, nếu gặp những trường hợp sai sót, vui lòng phản hồi lại, để chúng tôi kịp thời chỉnh sửa.\n\nQuý thầy cô và các bạn học sinh muốn đóng góp đề thi cũng như tài liệu cho ứng dụng xin vui lòng gửi cho chúng tôi, chúng tôi sẽ cập nhật nhanh nhất tới toán bộ người dùng.\n\nCác tài liệu trên ứng dụng được sưu tầm từ mạng xã hội Facebook và một số nguồn từ cộng đồng mạng. Chúng tôi không chịu trách nhiệm về nội dung tài liệu. Nếu có vấn đề về bản quyền, vui lòng liên hệ với chúng tôi theo Email duongthecuongbk227@gmail.com để được gỡ bỏ.\n\nChúc các bạn học tập tốt và thành công trên con đường mình đã chọn.\n\n \t \t \t \t \tHọc, học nữa, học mãi.\n  \t \t \t \t \t \t Nhóm phát triển.</string>
    <string name="lich_su_hoc_tap">Lịch sử học tập</string>
    <string name="cau_danh_dau">Câu đánh dấu</string>
    <string name="tien_do">Tiến độ:</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="thong_bao">Thông báo</string>
    <string name="finish">Finish</string>
    <string name="giai_thich_dap_an">GIẢI THÍCH ĐÁP ÁN:</string>
    <string name="ket_qua">Kết quả</string>
    <string name="de_thi">Đề thi</string>
    <string name="ly_thuyet">Lý thuyết</string>
    <string name="tai_lieu">Tài liệu</string>


    <array name="menuOptions">
        <item>Ôn thi THPT QG</item>
        <item>Đánh giá ứng dụng</item>
        <item>Chia sẻ với bạn bè</item>
        <item>Nguyên tắc cộng đồng</item>
        <item>Hẹn giờ học bài</item>
    </array>
</resources>
