<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"

    tools:context=".ui.main.MainFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/card_khtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginRight="@dimen/_4sdp"
        app:cardCornerRadius="@dimen/_4sdp"
        app:cardElevation="@dimen/_4sdp"
        app:layout_constraintBottom_toTopOf="@id/card_khxh"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_khtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/khoa_h_c_t_nhi_n"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/lnl_toan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/lnl_sinh"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/lnl_ly"
                app:layout_constraintTop_toBottomOf="@id/txt_khtn">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/math" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/to_n"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnl_ly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@id/lnl_toan"
                app:layout_constraintRight_toLeftOf="@id/lnl_hoa"
                app:layout_constraintTop_toBottomOf="@id/txt_khtn">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"

                    android:src="@drawable/physics" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/vat_ly"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnl_hoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@id/lnl_ly"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_khtn">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/chemistry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/hoa_hoc"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnl_sinh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/lnl_ly"
                app:layout_constraintTop_toBottomOf="@id/lnl_toan">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/biology" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sinh_hoc"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_khxh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginRight="@dimen/_4sdp"
        app:cardCornerRadius="@dimen/_4sdp"

        app:cardElevation="@dimen/_4sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_khtn">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_khxh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/khoa_h_c_x_h_i"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/lnl_van"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/lnl_anh"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/lnl_su"
                app:layout_constraintTop_toBottomOf="@id/txt_khxh">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/van" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ngu_van"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnl_su"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@id/lnl_van"
                app:layout_constraintRight_toLeftOf="@id/lnl_dia"
                app:layout_constraintTop_toBottomOf="@id/txt_khxh">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/lich_su" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/lich_su"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnl_dia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@id/lnl_su"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_khxh">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dia_ly" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dia_ly"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnl_anh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/lnl_gdcd"
                app:layout_constraintTop_toBottomOf="@id/lnl_van">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tieng_anh" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tieng_anh"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnl_gdcd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/lnl_anh"
                app:layout_constraintRight_toLeftOf="@id/lnl_dia"
                app:layout_constraintTop_toBottomOf="@id/lnl_su">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/gdcd" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/gdcd"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>